fix sonar bugs