@@ -6,10 +6,12 @@ import com.example.demo.dto.AirplaneDisplayDto;
 import com.example.demo.mapper.AirplaneMapper;
 import com.example.demo.repository.AirplaneRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @Service
 @RequiredArgsConstructor
@@ -28,18 +30,20 @@ public class AirplaneService {
     public List<AirplaneDisplayDto> getAllAirplanes() {
         return airplaneRepository.findAll().stream()
             .map(airplaneMapper::toDisplayDto)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public AirplaneDisplayDto getAirplaneById(Long id) {
         Airplane airplane = airplaneRepository.findById(id)
-            .orElseThrow(() -> new RuntimeException("Airplane not found with id: " + id));
+            .orElseThrow(() -> new ResponseStatusException(HttpStatus
+                .NOT_FOUND, "Airplane not found"));
         return airplaneMapper.toDisplayDto(airplane);
     }
 
     public AirplaneDisplayDto updateAirplane(Long id, AirplaneCreateDto dto) {
         Airplane existingAirplane = airplaneRepository.findById(id)
-            .orElseThrow(() -> new RuntimeException("Airplane not found with id: " + id));
+            .orElseThrow(() -> new ResponseStatusException(HttpStatus
+                .NOT_FOUND, "Airplane not found"));
         existingAirplane.setName(dto.getName());
         existingAirplane.setCapacity(dto.getCapacity());
         Airplane savedAirplane = airplaneRepository.save(existingAirplane);
@@ -48,7 +52,8 @@ public class AirplaneService {
     
     public void deleteAirplane(Long id) {
         if (!airplaneRepository.existsById(id)) {
-            throw new RuntimeException("Airplane not found with id: " + id);
+            throw new ResponseStatusException(HttpStatus
+                .NOT_FOUND, "User not found");
         }
         airplaneRepository.deleteById(id);
     }
