@@ -5,11 +5,13 @@ import com.example.demo.dto.AirportCreateDto;
 import com.example.demo.dto.AirportDisplayDto;
 import com.example.demo.mapper.AirportMapper;
 import com.example.demo.repository.AirportRepository;
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,21 +26,45 @@ public class AirportService {
         return airportMapper.toDisplayDto(savedAirport);
     }
 
+
+    @Transactional
+    public AirportDisplayDto createAirportTransactional(AirportCreateDto dto) {
+        if (dto.getCountry() == null) {
+            throw new ResponseStatusException(HttpStatus
+                .NOT_FOUND, "Airport not found");
+        }
+        Airport airport = airportMapper.toEntity(dto);
+        Airport savedAirport = airportRepository.save(airport);
+        return airportMapper.toDisplayDto(savedAirport);
+    }
+
+    public AirportDisplayDto createAirportNoTransaction(AirportCreateDto dto) {
+        if (dto.getCountry() == null) {
+            throw new ResponseStatusException(HttpStatus
+                .NOT_FOUND, "Airport not found");
+        }
+        Airport airport = airportMapper.toEntity(dto);
+        Airport savedAirport = airportRepository.save(airport);
+        return airportMapper.toDisplayDto(savedAirport);
+    }
+
     public List<AirportDisplayDto> getAllAirports() {
         return airportRepository.findAll().stream()
             .map(airportMapper::toDisplayDto)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public AirportDisplayDto getAirportByCode(Long code) {
         Airport airport = airportRepository.findById(code)
-            .orElseThrow(() -> new RuntimeException("Airport not found with code: " + code));
+            .orElseThrow(() -> new ResponseStatusException(HttpStatus
+                .NOT_FOUND, "Airport not found"));
         return airportMapper.toDisplayDto(airport);
     }
 
     public AirportDisplayDto updateAirport(Long code, AirportCreateDto dto) {
         Airport existingAirport = airportRepository.findById(code)
-            .orElseThrow(() -> new RuntimeException("Airport not found with code: " + code));
+            .orElseThrow(() -> new ResponseStatusException(HttpStatus
+                .NOT_FOUND, "Airport not found"));
         existingAirport.setCountry(dto.getCountry());
         existingAirport.setCity(dto.getCity());
         Airport savedAirport = airportRepository.save(existingAirport);
@@ -47,7 +73,8 @@ public class AirportService {
 
     public void deleteAirport(Long code) {
         if (!airportRepository.existsById(code)) {
-            throw new RuntimeException("Airport not found with code: " + code);
+            throw new ResponseStatusException(HttpStatus
+                .NOT_FOUND, "Airport not found");
         }
         airportRepository.deleteById(code);
     }
